// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutation results should warn when the result fields don't match the query fields 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Missing field '%s' while writing result %o",
      "description",
      Object {
        "__typename": "createTodo",
        "id": "2",
        "name": "Todo 2",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`mutation results should write results to cache according to errorPolicy 1`] = `Object {}`;

exports[`mutation results should write results to cache according to errorPolicy 2`] = `
Object {
  "Person:{\\"name\\":\\"Jenn Creighton\\"}": Object {
    "__typename": "Person",
    "name": "Jenn Creighton",
  },
  "ROOT_MUTATION": Object {
    "__typename": "Mutation",
  },
}
`;

exports[`mutation results should write results to cache according to errorPolicy 3`] = `
Object {
  "Person:{\\"name\\":\\"Ellen Shapiro\\"}": Object {
    "__typename": "Person",
    "name": "Ellen Shapiro",
  },
  "Person:{\\"name\\":\\"Jenn Creighton\\"}": Object {
    "__typename": "Person",
    "name": "Jenn Creighton",
  },
  "ROOT_MUTATION": Object {
    "__typename": "Mutation",
  },
}
`;
